fixed nav spacing

--- a/assets/sass/components/_search.scss
+++ b/assets/sass/components/_search.scss
@@ -12,6 +12,7 @@
 		color:$medium_grey;
 		border:none;
 		margin-left:2px;
+		margin-top:.6rem;
 		text-transform: uppercase;
 		cursor:pointer;
 		padding:.2rem 1rem;
@@ -37,7 +38,7 @@
 		
 
 		input[type="submit"]{
-			// display:none;
+			display:none;
 		}
 	}
 	
